# xous-core

./: .gitmodules  Cargo.toml
apps/: manifest.json
apps/ccr/: Cargo.toml
apps/ccr/src/: bench.rs  events.rs  main.rs  mqtt.rs  ui.rs  ui_improved.rs
libs/blitstr2/src/fonts/: bold.rs  emoji.rs  ja.rs  kr.rs  mono.rs  regular.rs  small.rs  tall.rs  zh.rs
libs/mqtt/: Cargo.toml
libs/mqtt/src/: client.rs  lib.rs  packet.rs
libs/mqtt/tests/: broker_test.rs
services/gam/src/: lib.rs  main.rs
services/graphics-server/src/backend/: minifb.rs
services/lvgl-runtime/: Cargo.toml  build.rs  lv_conf.h
services/lvgl-runtime/src/: api.rs  main.rs
services/lvgl-runtime/stubs/: errno.h  inttypes.h  math.h  stdio.h  stdlib.h  string.h  xous_stubs.c
services/wamr-runtime/: Cargo.toml  build.rs  wamr
services/wamr-runtime/platform/xous/: platform_internal.h  xous_platform.c
services/wamr-runtime/src/: api.rs  main.rs  native_funcs.rs  wamr_ffi.rs
services/wamr-runtime/stubs/: assert.h  xous_stubs.c
services/wamr-runtime/test/: add.wasm  add.wat  hello_world.wasm  lvgl.h  lvgl_demo.c  lvgl_demo.wasm
xtask/src/: main.rs
