[package]
name = "wamr-runtime"
version = "0.1.0"
authors = ["Claude <claude@anthropic.com>"]
edition = "2021"
description = "WAMR (WebAssembly Micro Runtime) server for Xous"

# Dependency versions enforced by Cargo.lock.
[dependencies]
xous = "0.9.69"
xous-ipc = "0.10.9"
log-server = { package = "xous-api-log", version = "0.1.68" }
ticktimer-server = { package = "xous-api-ticktimer", version = "0.9.68" }
xous-names = { package = "xous-api-names", version = "0.9.70" }
keyboard = { path = "../keyboard" }
log = "0.4.14"
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.14", default-features = false }

utralib = { version = "0.1.26", optional = true, default-features = false }

[build-dependencies]
cc = "1.0"

[features]
precursor = ["utralib/precursor"]
hosted = ["utralib/hosted"]
renode = ["utralib/renode"]
default = []
